# docs/swagger.yaml
@@ -468,6 +468,44 @@ paths:
       summary: Get list details
       tags:
       - lists
+  /api/list/index/project:
+    get:
+      consumes:
+      - application/json
+      description: Returns a paginated list of user inquiry and bug lists with metadata
+      parameters:
+      - description: Number of items per page (1-50)
+        in: query
+        name: count_per_page
+        required: true
+        type: integer
+      - description: Page number (starts from 1)
+        in: query
+        name: page
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_handlers_list.ListIndexResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/log_relay_internal_dtos.ValidationErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/log_relay_internal_dtos.UnauthorizedResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/log_relay_internal_dtos.ServerErrorResponse'
+      summary: Get paginated inquiry and bug lists
+      tags:
+      - lists
   /api/lists:
     get:
       consumes:
